Update ejml (0.30 -> 0.37). This changes the syntax a bit. Seems to improve numerical accuracy on some examples. But maybe 0.30 was used specifically for some reason I don't know about ?

--- a/build.xml
+++ b/build.xml
@@ -168,9 +168,9 @@
             <zipgroupfileset dir="${lib}" includes="colt.jar"/>
             <zipgroupfileset dir="${lib}" includes="beagle.jar"/>
             <zipgroupfileset dir="${lib}" includes="beagle.jar"/>
-            <zipgroupfileset dir="${lib}" includes="EJML-core-0.30.jar"/>
+            <zipgroupfileset dir="${lib}" includes="ejml-core-0.37.jar"/>
             <zipgroupfileset dir="${lib}" includes="lbfgs4j-0.2.1.jar"/>
-            <zipgroupfileset dir="${lib}" includes="EJML-dense64-0.30.jar"/>
+            <zipgroupfileset dir="${lib}" includes="ejml-ddense-0.37.jar"/>
         </jar>
 
         <!-- Put everything in ${build} into the beauti.jar file -->
